update portfolio page with more recent info, removed some non-relevant sections

--- a/css/style.css
+++ b/css/style.css
@@ -536,6 +536,11 @@ a:hover {
   color: #d9a13f;
   display: block;
 }
+#subHeading {
+  color: #d9a13f;
+  display: block;
+  font-size:25px;
+}
 /* ==========================================================================
    Portfolio Section
    ========================================================================== */
