Update for homework assignment
Add ld img, add div on html for image, and styling to img

--- a/css/style.css
+++ b/css/style.css
@@ -541,6 +541,10 @@ a:hover {
   display: block;
   font-size:25px;
 }
+#ld-logo img{
+  width: 250px;
+  height: 125px;
+}
 /* ==========================================================================
    Portfolio Section
    ========================================================================== */
